# akurai-crm

./: .gitignore  CHANGELOG.md  Cargo.toml  ISA.md  deploy.sh
crates/crm-api/: Cargo.toml
crates/crm-api/src/: error.rs  lib.rs  router_setup.rs
crates/crm-api/src/auth/: idp_client.rs  mod.rs  session.rs
crates/crm-api/src/handlers/: crud.rs  meta.rs  mod.rs  search.rs  static_files.rs  timeline.rs
crates/crm-api/tests/: api_test.rs
crates/crm-cli/: Cargo.toml
crates/crm-cli/src/: cmd_seed.rs  cmd_serve.rs  main.rs
crates/crm-core/: Cargo.toml
crates/crm-core/src/: error.rs  lib.rs  types.rs
crates/crm-core/src/entities/: company.rs  mod.rs  note.rs  opportunity.rs  person.rs  task.rs  timeline.rs
crates/crm-core/src/metadata/: mod.rs
crates/crm-core/tests/: integration.rs
crates/crm-mcp/: Cargo.toml
crates/crm-mcp/src/: lib.rs  server.rs  tools.rs
scripts/: validate.sh
site/backend/: collections.toml  page.json  routes.json
site/backend/locales/: en.json  is.json
site/content/docs/: getting-started.md
site/frontend/: app.js  companies.html  company-detail.html  crm.js  dashboard.html  databinder.js  index.html  notes.html  opportunities.html  opportunity-detail.html  people.html  person-detail.html  settings.html  styles.css  tasks.html  theme.js  themes.css  themes.json
